--- a/website/src/layouts/Layout.astro
+++ b/website/src/layouts/Layout.astro
@@ -1,11 +1,15 @@
+---
+import "../styles/global.css";
+---
+
 <!doctype html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width" />
-        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <link rel="icon" type="image/ng" href="/favicon-16x16.png" />
         <meta name="generator" content={Astro.generator} />
-        <title>Astro Basics</title>
+        <title>Hot Spot Detection</title>
     </head>
     <body>
         <slot />
@@ -18,5 +22,7 @@
         margin: 0;
         width: 100%;
         height: 100%;
+        background-color: #f2f0ea;
+        font-family: "Lexend Variable";
     }
 </style>
