--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -17,7 +17,7 @@ import "@fontsource-variable/lexend";
         <div class="flex flex-col items-center gap-2 mx-32 px-12">
             <div class="flex flex-col gap-4">
                 <Image class="self-center" src={solarPanelLogo} alt="A solar panel" height="100" />
-                <h1 class="font-light text-4xl text-center">Solar Panel Hot Spots Detection Techniques</h1>
+                <h1 class="font-light text-4xl text-center">Thermal Hotspots Detection in Photovoltaic Modules</h1>
             </div>
             <h2 class="font-extralight text-sm">
                 A computer vision project at Universidad Politécnica de Madrid
